--- a/src/PlateauCityGml/PlateauCityGml.csproj
+++ b/src/PlateauCityGml/PlateauCityGml.csproj
@@ -48,6 +48,7 @@
     <Compile Include="Position.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Surface.cs" />
+    <Compile Include="TextureInfo.cs" />
     <Compile Include="Triangle.cs" />
     <Compile Include="Triangulator.cs" />
     <Compile Include="Vertex.cs" />
