--- a/src/PlateauCityGmlToObj/PlateauCityGmlToObj.csproj
+++ b/src/PlateauCityGmlToObj/PlateauCityGmlToObj.csproj
@@ -6,8 +6,8 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProjectGuid>{9FD5E50C-2004-474D-9968-F8F368A4ECAC}</ProjectGuid>
     <OutputType>Exe</OutputType>
-    <RootNamespace>CityGMLTest</RootNamespace>
-    <AssemblyName>CityGMLTest</AssemblyName>
+    <RootNamespace>CityGMLToObj</RootNamespace>
+    <AssemblyName>CityGMLToObj</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
